// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse 001. parse create statement: Create table 1`] = `
[
  CreateTableStatement {
    "columns": [
      ColumnDef {
        "collation": undefined,
        "dataType": Char {
          "_charcterStringType": "nominal",
          "_stringType": "nominal",
          "length": 10,
          "name": "CHAR",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "id",
        },
        "options": [],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Decimal {
          "_decimalType": "nominal",
          "_numericType": "nominal",
          "name": "DECIMAL",
          "precision": 10,
          "scale": 3,
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "price",
        },
        "options": [],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Binary {
          "_binaryStringType": "nominal",
          "_stringType": "nominal",
          "length": 20,
          "name": "BINARY",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "name",
        },
        "options": [],
      },
    ],
    "constraints": [],
    "external": false,
    "fileFormat": undefined,
    "ifNotExists": false,
    "location": undefined,
    "name": ObjectName {
      "value": [
        Ident {
          "quoteStyle": """,
          "value": "ITEM",
        },
      ],
    },
    "orReplace": false,
    "query": undefined,
    "withOptions": [],
    "withoutRowid": false,
  },
]
`;

exports[`parse 002. parse create statement: Create table 1`] = `
[
  CreateTableStatement {
    "columns": [
      ColumnDef {
        "collation": undefined,
        "dataType": Varchar {
          "_charcterStringType": "nominal",
          "_stringType": "nominal",
          "length": 100,
          "name": "VARCHAR",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "name",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": NotNull {
              "columnoption": "nominal",
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Double {
          "_numericType": "nominal",
          "name": "DOUBLE",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "lat",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Null {
              "columnoption": "nominal",
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Double {
          "_numericType": "nominal",
          "name": "DOUBLE",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "lng",
        },
        "options": [],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "constrained",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Null {
              "columnoption": "nominal",
            },
          },
          ColumnOptionDef {
            "name": Ident {
              "quoteStyle": undefined,
              "value": "pkey",
            },
            "option": Unique {
              "columnoption": "nominal",
              "isPrimary": true,
            },
          },
          ColumnOptionDef {
            "name": undefined,
            "option": NotNull {
              "columnoption": "nominal",
            },
          },
          ColumnOptionDef {
            "name": undefined,
            "option": Unique {
              "columnoption": "nominal",
              "isPrimary": false,
            },
          },
          ColumnOptionDef {
            "name": undefined,
            "option": Check {
              "columnoption": "nominal",
              "expr": BinaryOp {
                "_expr": "nominal",
                "left": Identifier {
                  "_expr": "nominal",
                  "ident": Ident {
                    "quoteStyle": undefined,
                    "value": "constrained",
                  },
                },
                "op": BinaryOperator {
                  "value": ">",
                },
                "right": Number {
                  "_expr": "nominal",
                  "value": "0",
                },
              },
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "ref",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Foreign {
              "columnoption": "nominal",
              "foreignTable": ObjectName {
                "value": [
                  Ident {
                    "quoteStyle": undefined,
                    "value": "othertable",
                  },
                ],
              },
              "onDelete": undefined,
              "onUpdate": undefined,
              "referredColumns": [
                Ident {
                  "quoteStyle": undefined,
                  "value": "a",
                },
                Ident {
                  "quoteStyle": undefined,
                  "value": "b",
                },
              ],
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "ref2",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Foreign {
              "columnoption": "nominal",
              "foreignTable": ObjectName {
                "value": [
                  Ident {
                    "quoteStyle": undefined,
                    "value": "othertable2",
                  },
                ],
              },
              "onDelete": ReferencialAction {
                "name": "CASCADE",
              },
              "onUpdate": ReferencialAction {
                "name": "NO ACTION",
              },
              "referredColumns": [],
            },
          },
        ],
      },
    ],
    "constraints": [],
    "external": false,
    "fileFormat": undefined,
    "ifNotExists": false,
    "location": undefined,
    "name": ObjectName {
      "value": [
        Ident {
          "quoteStyle": undefined,
          "value": "manhattan",
        },
        Ident {
          "quoteStyle": undefined,
          "value": "cities",
        },
      ],
    },
    "orReplace": false,
    "query": undefined,
    "withOptions": [],
    "withoutRowid": false,
  },
]
`;

exports[`parse 003. parse create statement: Create table 1`] = `
[
  CreateTableStatement {
    "columns": [
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "c1",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Check {
              "columnoption": "nominal",
              "expr": BinaryOp {
                "_expr": "nominal",
                "left": Identifier {
                  "_expr": "nominal",
                  "ident": Ident {
                    "quoteStyle": undefined,
                    "value": "c1",
                  },
                },
                "op": BinaryOperator {
                  "value": ">",
                },
                "right": Number {
                  "_expr": "nominal",
                  "value": "10",
                },
              },
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "c2",
        },
        "options": [
          ColumnOptionDef {
            "name": Ident {
              "quoteStyle": undefined,
              "value": "c2_positive",
            },
            "option": Check {
              "columnoption": "nominal",
              "expr": BinaryOp {
                "_expr": "nominal",
                "left": Identifier {
                  "_expr": "nominal",
                  "ident": Ident {
                    "quoteStyle": undefined,
                    "value": "c2",
                  },
                },
                "op": BinaryOperator {
                  "value": ">",
                },
                "right": Number {
                  "_expr": "nominal",
                  "value": "0",
                },
              },
            },
          },
        ],
      },
      ColumnDef {
        "collation": undefined,
        "dataType": Int {
          "_numericType": "nominal",
          "name": "INT",
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "c3",
        },
        "options": [
          ColumnOptionDef {
            "name": undefined,
            "option": Check {
              "columnoption": "nominal",
              "expr": BinaryOp {
                "_expr": "nominal",
                "left": Identifier {
                  "_expr": "nominal",
                  "ident": Ident {
                    "quoteStyle": undefined,
                    "value": "c3",
                  },
                },
                "op": BinaryOperator {
                  "value": "<",
                },
                "right": Number {
                  "_expr": "nominal",
                  "value": "100",
                },
              },
            },
          },
        ],
      },
    ],
    "constraints": [
      Check {
        "_tableConstraint": "nominal",
        "expr": BinaryOp {
          "_expr": "nominal",
          "left": Identifier {
            "_expr": "nominal",
            "ident": Ident {
              "quoteStyle": undefined,
              "value": "c1",
            },
          },
          "op": BinaryOperator {
            "value": "<>",
          },
          "right": Number {
            "_expr": "nominal",
            "value": "0",
          },
        },
        "name": Ident {
          "quoteStyle": undefined,
          "value": "c1_nonzero",
        },
      },
    ],
    "external": false,
    "fileFormat": undefined,
    "ifNotExists": false,
    "location": undefined,
    "name": ObjectName {
      "value": [
        Ident {
          "quoteStyle": undefined,
          "value": "t1",
        },
      ],
    },
    "orReplace": false,
    "query": undefined,
    "withOptions": [],
    "withoutRowid": false,
  },
]
`;
